--- a/mystyle.css
+++ b/mystyle.css
@@ -7,9 +7,6 @@ body {
     font-size:45px
   }
 
-  p {
-      color: yellow;
-  }
   
   p1{
     color: rgb(63, 63, 63);
@@ -20,39 +17,18 @@ body {
     text-align: center;
   }
   .topnav {
-    background: #646464;
+    background:rgb(68, 68, 68);
     font-size: 30px;
 
   }
 
   .footer {
-    background: #646464;
+    background:rgb(68, 68, 68);
     font-size: 15px;
     text-align: center;
     bottom: 0;
     }
-/* The sidebar menu */
-.sidenav {
-  height: 350px; /* Full-height: remove this if you want "auto" height */
-  width: 175px; /* Set the width of the sidebar */
-  top: 10; /* Stay at the top */
-  left: 100;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-  position: absolute;
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  border-bottom: 3px solid rgb(231, 231, 2);
-
-}
+    
 img {
   max-width:20%;
   height:auto;
@@ -60,9 +36,5 @@ img {
 }
 
 a{
-  color: rgb(97, 25, 165);
-}
-h3{
-  color:rgb(231, 231, 2);
-  border-bottom: 3px solid rgb(231, 231, 2);
+  color: blueviolet;
 }
