--- a/mystyle.css
+++ b/mystyle.css
@@ -9,7 +9,7 @@ body {
 
   
   p1{
-    color: rgb(63, 63, 63);
+    color: blueviolet;
     bottom: 0;
 
   }
@@ -28,7 +28,7 @@ body {
     text-align: center;
     bottom: 0;
     }
-    
+
 img {
   max-width:20%;
   height:auto;
