mobile resize test

--- a/mystyle.css
+++ b/mystyle.css
@@ -7,7 +7,12 @@ body {
     font-size:45px;
   }
 
-  
+  @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    body {
+      background: #999;
+      width: 100%;
+    }
+  }
   p1{
     color: blueviolet;
     bottom: 0;
