--- a/mystyle.css
+++ b/mystyle.css
@@ -14,8 +14,29 @@ body {
 
   }
   html {
-    text-align: center;
+        text-align: center;
   }
+.style1{
+  filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
+}
+.style2{
+  filter:none;
+
+}
+.style3{
+  filter:invert(100%);
+
+}
+.redroom{
+
+  background-color: blueviolet;
+  color: rgb(0, 0, 0);
+  padding: 8px 10px;
+  text-align: center;
+  display: inline-block;
+  font-size: 15px;
+}
+
   .topnav {
     font-size: 35px;
 
