--- a/mystyle.css
+++ b/mystyle.css
@@ -91,9 +91,16 @@ button{
   height:auto;
   background-color: rgb(113, 212, 31);
   }
-
+  .redroom{
+    border-color: rgb(227, 253, 154);;
+    background-color: rgb(113, 212, 31);
+    color: rgb(227, 253, 154);
+    padding: 8px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 20px;
+  }
   button{
-    border: none;
 
     background-color: rgb(113, 212, 31);
     color: rgb(227, 253, 154);
