--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #ff0080, #ff8c00, #ffff00, #00ff00, #0080ff, #800080);
+  background: linear-gradient(to right, #00ff7f, #007300, #0000ff, #ff00ff, #ff7f00, #7fff7f);
 }
   
   h1 {
